[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
authors = [{name = "xinetzone", email = "735613050@qq.com"}]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "xbook"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "d2py",
  "attrs",
  "importlib-metadata>=4.12"
]

maintainers = [
  {name = "xinetzone", email = "735613050@qq.com"},
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
Home = "https://github.com/xinetzone/xbook"

[project.optional-dependencies]
doc = [
  "myst-nb",
  "xyzstyle",
  "sphinx-copybutton",
  "sphinxcontrib-bibtex",
  "sphinx-thebe",
  "sphinx-design",
  "sphinx-automodapi",
  "sphinx-sitemap",
  "sphinx-comments",
]

coverage = [
  "pytest-cov",
  "pytest-regressions",
  "codecov",
  "xbook[test]",
]
dev = [
  "pyyaml",
  "pre-commit",
  "note-demo[coverage]",
]
test = [
  "pytest",
  "xbook[doc]",
]

[project.entry-points]
"sphinx.html_themes" = {xbook = "xbook"}

[tool.flit.sdist]
# include = ["docs/"]
exclude = ['doc', '.git', '.github']
